tests/cases/errors/parse/unclosed_brace.hc
//@ error: unexpected end of input
U0 Main()
{
  I64 x = 1;
